# Proyecto-Machine-Learning-con-Kedro---BMW

./: README.md  estructura.txt  pyproject.toml  requirements.txt
conf/base/: catalog.yml  logging.yml  parameters.yml
conf/local/: credentials.yml
data/03_primary/: X_test.pkl  X_train.pkl  bmw_classification_clean.csv  bmw_used_clean.csv  y_test.pkl  y_train.pkl
data/06_models/: bmw_price_model.pkl  linear_regression.pkl
notebooks/: 01_business_understanding.ipynb  02_data_understanding.ipynb  03_data_preparation.ipynb  04_modeling.ipynb  05_evaluation.ipynb  06_deployment.ipynb  Untitled.ipynb
src/proyecto_ml/: pipeline_registry.py
src/proyecto_ml/pipelines/: __init__.py
src/proyecto_ml/pipelines/data_engineering/: nodes.py  pipeline.py
src/proyecto_ml/pipelines/data_science/: nodes.py  pipeline.py
